--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node index.js"
   },
   "author": "HerrSubset",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "mocha": "^5.0.0"
   },
